# sun

./: .gitignore  Makefile.am  README.rst  configure.ac
include/: Common.hpp  ExpressionTemplates.hpp  SUN.hpp  Veclike.hpp  Vector.hpp  cplx.hpp
testing/: Arithmetic.cc  Complex.cc  Generic.cc  Helper.hpp  Makefile.am  SUNArithmetic.cc  Veclike.cc  VectorArithmetic.cc  mk_known_values.py  mk_known_values_vec.py
